--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-json-view-lite": "^2.5.0",
+    "react-router-dom": "^7.9.1",
     "swagger-ui": "^5.29.0",
     "swagger-ui-dist": "^5.29.0",
     "swagger-ui-react": "^5.29.0"
