--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-ui-custom",
-  "private": true,
+  "private": false,
   "version": "0.0.2",
   "type": "module",
   "main": "dist/index.js",
