--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "vite build",
     "build:dev": "tsc -p tsconfig.build.json && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "push:git": "npm version patch -m \"chore(release): %s\" && git push --follow-tags"
   },
   "dependencies": {
     "react": "^19.1.1",
